# blockmesh-studio

./: .gitignore  CLAUDE.md  README.md  conftest.py  main.py  pyproject.toml  run_tests.bat  run_tests.sh
.agent/workflows/: release.md
.github/workflows/: ci.yml
examples/: example_flow_channel.csv
src/: __init__.py  main.py
src/core/: __init__.py  cylinder_mesh.py  data_reader.py  excel_reader.py  mesh_generator.py
src/models/: __init__.py  mesh_params.py
src/ui/: __init__.py  i18n.py  main_window.py
src/ui/resources/: __init__.py  muji_style.qss
src/ui/widgets/: __init__.py  boundary_layer_panel.py  cylinder_params_panel.py  data_info_panel.py  file_selector.py  mesh_params_panel.py
tests/: __init__.py  test_utf8_support.py
